<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/panton"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:paddingLeft="10dp"
        android:text="@string/kiama_kia_ma"
        android:textColor="#050505"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="280dp"
        android:paddingLeft="10dp"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textColor="#050505"
        android:text="@string/karibu_maina_na_mwagi"/>

    <ImageView
        android:layout_width="375dp"
        android:layout_height="150dp"
        android:layout_margin="0dp"
        app:srcCompat="@drawable/sheep" />


    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="-19dp"
        android:paddingLeft="5dp"
        android:background="#ffffff"
        android:hint="@string/username"
        android:drawableLeft="@drawable/user"/>

    <EditText
        android:id="@+id/edittext_passward"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_margin="20dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="5dp" />


    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/showpwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_password"/>

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#0339FC"
        android:text="@string/login"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:text="@string/registered"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/textview_register"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/register_here"
            android:textColor="#0339FC"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:indeterminate="true"
        android:visibility="invisible" />


</LinearLayout>